# attrembed

./: .gitignore  LICENSE  README.md  pyproject.toml
attrembed/: __init__.py  attribute_manager.py  base_encoder.py  build_manager.py  classifier_head.py  helpers.py  hierarchical_head.py  trainer.py
attrembed/evals/: knn_eval.py  similarity_analysis.py  similarity_regression.py  visualizations.py
